--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 70px;
+  padding-top: 4.375rem;
   background-color: #fffbfc;
 }
 
@@ -8,21 +8,21 @@ body {
   left: 0;
   right: 0;
   top: 0;
-  height: 70px;
+  height: 4.375rem;
   background: #7f2ccb;
-  box-shadow: 0px 23px 15px -6px rgba(0, 0, 0, 0.25);
+  box-shadow: 0rem 1.438rem 0.938rem -0.375rem rgba(0, 0, 0, 0.25);
 }
 .nav-title {
   color: #fff;
   font-family: Roboto Slab;
-  font-size: 32px;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
 
 .nav-content {
-  height: 70px;
+  height: 4.375rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -31,43 +31,70 @@ body {
   margin-left: auto;
 }
 
-.nav-item:nth-child(0) {
-  text-decoration: underline;
-}
-
 .nav-items {
   display: flex;
   align-items: flex-start;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .nav-item {
   color: #fff;
   font-family: Roboto Slab;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
 .darkmode-btn {
-  width: 24px;
-  height: 24px;
+  width: 1.5rem;
+  height: 1.5rem;
   flex-shrink: 0;
 }
 
 .headers {
   color: #000;
   font-family: Roboto Slab;
-  font-size: 45px;
+  font-size: 2.813rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
 }
 
 section {
-    height: 100vh;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+  height: 100vh;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profile p {
+  color: #000;
+  font-family: Roboto Slab;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.profile p:last-of-type {
+    text-align: end;
+}
+
+.profile span {
+    text-align: center;
+  display: block;
+  width: auto;
+  color: #000;
+  font-family: Roboto Slab;
+  font-size: 5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border-bottom: 5px solid #7F2CCB;
+}
+
+.socials {
+    display: flex;
+    gap: 0.5rem;
 }
