--- a/style.css
+++ b/style.css
@@ -37,14 +37,6 @@ body {
   gap: 1.25rem;
 }
 
-.nav-item {
-  color: #fff;
-  font-family: Roboto Slab;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
 
 .darkmode-btn {
   width: 1.5rem;
@@ -62,10 +54,35 @@ body {
 }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  padding-left: auto;
+  padding-right: auto;
+  justify-content: space-evenly !important;
+  gap: 5rem;
+}
+
+.profile {
+  flex: 3;
+  max-width: 40rem;
+}
+
+.logo-image {
+  flex: 2;
+  max-width: 30rem;
+}
+
+.fullname {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile p {
@@ -78,12 +95,11 @@ section {
 }
 
 .profile p:last-of-type {
-    text-align: end;
+  text-align: end;
 }
 
 .profile span {
-    text-align: center;
-  display: block;
+  text-align: center;
   width: auto;
   color: #000;
   font-family: Roboto Slab;
@@ -91,10 +107,266 @@ section {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  border-bottom: 5px solid #7F2CCB;
+  border-bottom: 5px solid #7f2ccb;
 }
 
 .socials {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.section-title {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.line {
+  flex-grow: 9;
+  height: 7px;
+  background-color: #7f2ccb;
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 13.5rem;
+  background-color: #7f2ccb;
+  color: #fff;
+  text-align: center;
+  font-family: Roboto Slab;
+  font-style: normal;
+  line-height: normal;
+}
+
+.footer-content {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-top {
+  padding-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  margin-bottom: 2rem;
+}
+.footer-left,
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  gap: 0.5rem;
+}
+
+.footer-left h1,
+.footer-right h1 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+#about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.about-image {
+  max-width: 30rem;
+  flex: 1;
+}
+
+.about-text {
+  flex: 2;
+  color: #000;
+  font-family: Roboto Slab;
+  font-size: 1.5625rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+#skills {
+  display: flex;
+  flex-direction: column;
+}
+
+.skills-container {
+  align-self: center;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25rem;
+  width: 40.75rem;
+  flex-flow: row wrap;
+  margin: auto;
+}
+
+.skill-container {
+  flex-grow: 1;
+  width: 12.75rem;
+  height: 12.75rem;
+  border-radius: 1.875rem;
+  background: #7f2ccb;
+  box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.skill-container p {
+  color: #000;
+  font-family: Roboto Slab;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.card {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 1rem;
+  padding: 1rem;
+  min-height: 35rem;
+}
+
+.card:last-child {
+  flex-direction: row-reverse;
+}
+
+.card-description {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 1;
+}
+
+.card-description h6 {
+  color: #000;
+  font-family: Roboto Slab;
+  font-size: 1.5625rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.tech-stack {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.card-description p {
+  color: #000;
+  font-family: Roboto Slab;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.stack {
+  color: white !important;
+  font-family: Roboto Slab;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  background-color: #7f2ccb;
+  padding: 0.5rem 1rem;
+}
+
+#projects {
+  height: auto;
+}
+
+.card-image {
+  flex: 1;
+}
+
+.nav-item {
+    position: relative;
+    color: #fff;
+    font-family: Roboto Slab;
+    letter-spacing: 0.5px;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition: 0.3s;
+  }
+  
+  .nav-item:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: #ff3c78;
+    left: 0;
+    width: 0;
+    bottom: -10px;
+    transition: 0.3s;
+  }
+  
+  
+  .nav-item:hover:after {
+    width: 100%;
+  }
+
+  .nav-item:hover {
+    font-weight: 600;
+  }
+
+  #projects {
+    margin-bottom: 5rem;
+  }
+
+@media (min-width: 0px) and (max-width: 1253px) {
+  html {
+    font-size: 12px;
+  }
+
+  .nav-content {
+    width: 90%;
+  }
+
+  .logo-image {
+    max-width: 25rem;
+  }
+
+  section {
+    width: 90%;
+  }
+
+  .about-image {
+    max-width: 25rem;
+  }
+
+  .skill-container svg {
+    width: 8rem;
+  }
+
+  .footer-content {
+    width: 90%;
+  }
 }
