--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
   padding-top: 4.375rem;
   background-color: #fffbfc;
@@ -5,12 +10,15 @@ body {
 
 .navbar {
   position: fixed;
+  z-index: 10;
   left: 0;
   right: 0;
   top: 0;
   height: 4.375rem;
   background: #7f2ccb;
   box-shadow: 0rem 1.438rem 0.938rem -0.375rem rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: space-around;
 }
 .nav-title {
   color: #fff;
@@ -27,8 +35,6 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 80%;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .nav-items {
@@ -181,6 +187,7 @@ section {
   align-items: center;
   margin-top: auto;
   margin-bottom: auto;
+  gap: 1rem;
 }
 
 .about-image {
@@ -343,7 +350,7 @@ section {
 
 @media (min-width: 0px) and (max-width: 1253px) {
   html {
-    font-size: 12px;
+    font-size: 11px;
   }
 
   .nav-content {
@@ -358,11 +365,12 @@ section {
     width: 90%;
   }
 
-  .about-image {
-    max-width: auto;
+
+  .about-text {
     flex: 1;
   }
-  .about-content {
+
+  .about-image {
     flex: 1;
   }
 
