--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     margin: 0;
     padding: 0;
+    width: 100vw;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
 .navbar {
   position: fixed;
   z-index: 10;
+  width: 100vw;
   left: 0;
   right: 0;
   top: 0;
@@ -61,7 +63,7 @@ body {
 
 section {
   min-height: 100vh;
-  width: 80%;
+  width: 80vw;
   margin-left: auto;
   margin-right: auto;
 }
@@ -348,13 +350,18 @@ section {
     margin-bottom: 5rem;
   }
 
-@media (min-width: 0px) and (max-width: 1253px) {
+@media (min-width: 768px) and (max-width: 1253px) {
   html {
     font-size: 11px;
+    width: 100%;
+  }
+
+  .navbar {
+    width: 100vw;
   }
 
   .nav-content {
-    width: 90%;
+    width: 90vw;
   }
 
   .logo-image {
@@ -362,7 +369,7 @@ section {
   }
 
   section {
-    width: 90%;
+    width: 90vw;
   }
 
 
@@ -388,7 +395,59 @@ section {
     width: 8rem;
   }
 
-  .footer-content {
-    width: 90%;
+  .footer {
+    height: 15rem;
   }
+  .footer-content {
+    width: 90vw;
+  }
+  .footer-content {
+    margin-bottom: 3rem;
+}
+}
+
+
+@media (min-width: 0) and (max-width: 768px) {
+    html {
+        font-size: 10px;
+    }
+
+    .navbar {
+        width: 100vw;
+    }
+    
+    .nav-content {
+        width: 90vw;
+    }
+
+    .home {
+        flex-direction: column-reverse;
+    }
+
+    .about-content {
+        flex-direction: column;
+    }
+
+    .skill-container svg {
+        width: 9rem;
+    }
+
+    section {
+        width: 90vw;
+    }
+
+    .card {
+        flex-direction: column-reverse;
+    }
+
+    .card:last-child {
+        flex-direction: column-reverse;
+    }
+
+    .footer {
+        height: 15rem;
+    }
+    .footer-content {
+        margin-bottom: 3rem;
+    }
 }
