--- a/style.css
+++ b/style.css
@@ -247,6 +247,14 @@ section {
   line-height: normal;
 }
 
+.skill-container svg {
+    transition: ease-in-out 0.3s;
+}
+
+.skill-container svg:hover {
+    transform: scale(1.1) ;
+}
+
 .card {
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -311,7 +319,18 @@ section {
 }
 
 .card-image {
-  flex: 1;
+    display: inline-block;
+    overflow: hidden;
+    flex: 1;
+}
+
+.card-image img {
+    display: block;
+    transition: .3s ease-in-out;
+}
+
+.card-image:hover img {
+    transform: scale(1.3);
 }
 
 .nav-item {
@@ -360,6 +379,10 @@ section {
     width: 100vw;
   }
 
+  .navbar {
+    height: 6rem;
+    align-items: center;
+  }
   .nav-content {
     width: 90vw;
   }
@@ -382,17 +405,17 @@ section {
   }
 
   .skills-container {
-    width: 40rem;
-    height: 40rem;
+    width: 60rem;
+    height: 60rem;
   }
 
   .skill-container {
-    width: 12rem;
-    height: 12rem;
+    width: 18rem;
+    height: 18rem;
   }
 
   .skill-container svg {
-    width: 8rem;
+    width: 12rem;
   }
 
   .footer {
@@ -413,6 +436,8 @@ section {
     }
 
     .navbar {
+        height: 6rem;
+        align-items: center;
         width: 100vw;
     }
     
@@ -445,7 +470,7 @@ section {
     }
 
     .footer {
-        height: 15rem;
+        height: 16rem;
     }
     .footer-content {
         margin-bottom: 3rem;
