--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ body {
   top: -35vh;
   width: 100%;
   padding-top: 7rem;
-  min-height: 30vh;
+  gap: 1rem;
+  min-height: 25vh;
   background-color: #7f2ccb;
   box-shadow: 0rem 1.438rem 0.938rem -0.375rem rgba(0, 0, 0, 0.25);
   transition: 0.4s ease-in-out;
